# esp32player

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
components/pi4ioe5v6416/: CMakeLists.txt  pi4ioe5v6416.c  pi4ioe5v6416.h
components/yoto_v2/: CMakeLists.txt  board.c  board.h  board_def.h  board_pins_config.c
main/: CMakeLists.txt  all.h  analog.c  cr95hf.c  cr95hf.h  debugio.c  digital.c  display.c  gct.c  ht16d35a.c  ht16d35a.h  images.c  input_processor.c  lis2dh12.c  lis2dh12_reg.c  lis2dh12_reg.h  main.c  nfc_process.c  pi4ioe5v6416.c  pi4ioe5v6416.h  play_sdcard_music_example.c  poller.c  rotaries.c  rotary.c  sdcard.c  sound_stream.c  webserver.c  wifi.c
